# kth-reinforcement-learning

./: .gitignore  LICENSE  README.md  made.ipynb  pyproject.toml  requirements.txt  tesst.ipynb  test.ipynb  version2.py
data/: maze.txt  maze_delay.txt  maze_minotaur.txt  maze_minotaur_key.txt  plucking_berries.txt
el2805/: utils.py
lab0/: main.py
results_MSP_noboundry_only_follow_reference0619/: actor_with_max_reward.pth  critic_with_max_reward.pth  ppo.pickle
results_MSP_with_boundry_penalty_0620/: actor_with_max_reward.pth  critic_with_max_reward.pth  ppo.pickle
results_MSP_with_tilt_0620/: actor_with_max_reward.pth  critic_with_max_reward.pth  ppo.pickle
results_MSP_with_tilt_0627/: actor_with_max_reward.pth  critic_with_max_reward.pth
results_MSP_with_tilt_wrapper/: actor_with_max_reward.pth  critic_with_max_reward.pth  ppo.pickle
results_version1_backup_to0327/: neural-network-3-actor.pth  neural-network-3-critic.pth  ppo.pickle
results_version1_backup_to_0327_2/: actor_with_max_reward.pth  critic_with_max_reward.pth  ppo.pickle
results_version1_backup_to_0327_3/: actor_with_max_reward.pth  critic_with_max_reward.pth  ppo.pickle
results_version1_with_limit/: ppo.pickle
results_version1_with_limit_0614/: actor_with_max_reward.pth  critic_with_max_reward.pth  ppo.pickle
results_version1_with_limit_0614_small_learnrate/: ppo.pickle
results_version1_with_limit_0614_small_learnrate_more_train/: ppo_more_train.pickle
results_version1_with_limit_2/: ppo.pickle
results_version1_with_limit_3/: actor_with_max_reward.pth  ppo.pickle  (+2 more)
(+136 files in other folders)
